--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
   <meta charset='utf-8'>
   <!-- bootstrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-  <div id="app"></div>
+
+  <div class="parallax" id="app"></div>
+
   <script src="bundle.js"></script>
 </body>
 </html>
